<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <ImageView
           android:layout_width="match_parent"
           android:layout_height="220dp"
           android:scaleType="centerCrop"
           android:id="@+id/collegeImage"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:layout_marginHorizontal="@dimen/text_margin"
           android:layout_marginTop="@dimen/text_margin"
           android:fontFamily="@string/light"
           android:text="@string/about_college"
           android:textColor="@color/textColor"
           android:textSize="@dimen/text_size" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:padding="@dimen/text_margin">

           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/ic_label"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_marginLeft="@dimen/text_margin"
               android:text="Green Environment"
               android:textColor="@color/textColor"
               android:textSize="@dimen/text_size"/>
       </LinearLayout>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Branch"
           android:fontFamily="@string/bold"
           android:textColor="@color/textColor"
           android:layout_gravity="center_horizontal"
           android:textSize="@dimen/title_size"
           android:layout_marginTop="36dp"/>

       <androidx.viewpager.widget.ViewPager
           android:id="@+id/viewPager"
           android:layout_width="match_parent"
           android:layout_height="800dp"
           android:layout_marginTop="@dimen/text_margin"
           android:foregroundGravity="center"
           android:clipToPadding="false"
           />

   </LinearLayout>

</androidx.core.widget.NestedScrollView>